@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.131 2005/04/09 06:22:00 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.132 2005/04/10 05:05:45 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  10 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  tidy_partitions() function in GLIStorageDevice
 
   9 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Major GLIStorageDevice overhaul...all MB now instead of sectors.
